--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -23,6 +25,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: ./server
+
+      - name: Create .env file
+        run: |
+          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
 
       - name: Test with Jest
         run: npm test
