--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+    # env:
+    #   ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -26,9 +26,9 @@ jobs:
         run: npm ci
         working-directory: ./server
 
-      - name: Create .env file
-        run: |
-          echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+      # - name: Create .env file
+      #   run: |
+      #     echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
 
       - name: Test with Jest
         run: npm test
