--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
+      # Warning is a bug (https://github.com/github/vscode-github-actions/issues/222)
       ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
     steps:
       - name: Check out repository
@@ -25,10 +26,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: ./server
-
-      # - name: Create .env file
-      #   run: |
-      #     echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
 
       - name: Test with Jest
         run: npm test
