--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "medmatch",
   "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently -n client,server -c blue,green \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+    "start": "concurrently -n client,server -c blue,green \"npm run dev --prefix client\" \"npm run dev --prefix server\""
   },
   "repository": {
     "type": "git",
