User Tests and File Tests (#35)
* validation middleware changes

* user validaiton tests

* testing

* Merged changes from auth-setup in /client to frontend-auth

* Merged changes from auth-setup in /server/src to frontend-auth

* removed redundant credentials validator from user module

* Cleaned up imports and authentication logging

* refactoring

* Set up pre test authentication

* finished unit validation tests and started on integration tests

* happy paths for router

* finished user integration tests

* readability and docs

* added access token secret to actions

* test

* further testing

* removed uneccesary step

* file service tests and removed user barrel imports

* all file tests

* auth service and controller unit tests

* yooo got the auth router and validation tests

* added secret

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+      REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
