--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2"
@@ -37,7 +38,6 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.5",
     "@types/supertest": "^6.0.3",
