removed barrel exports

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,5 +19,6 @@
     "types": ["node", "@types/jest"]
   },
   "include": ["src/**/*.ts", "tests/**/*.ts", "*.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "isolatedModules": true
 }
