--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.1",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-slot": "^1.1.2",
         "axios": "^1.8.4",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "jwt-decode": "^4.0.0",
-        "@radix-ui/react-slot": "^1.1.2",
-        "class-variance-authority": "^0.7.1",
         "lucide-react": "^0.482.0",
         "next": "^15.3.0",
         "next-auth": "^4.24.11",
