--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^5.2.1",
+        "@radix-ui/react-accordion": "^1.2.11",
+        "@radix-ui/react-checkbox": "^1.3.2",
         "@radix-ui/react-label": "^2.1.7",
-        "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-scroll-area": "^1.2.9",
+        "@radix-ui/react-slot": "^1.2.3",
         "axios": "^1.8.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.6.0",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.482.0",
         "next": "^15.3.0",
