--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,15 @@ jobs:
         with:
           node-version: "23.5.0"
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
         working-directory: ./server
 
       - name: Test with Jest
-        run: npm test
+        run: pnpm test
         working-directory: ./server
