--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "medmatch",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "start": "concurrently -n client,server -c blue,green \"npm run dev --prefix client\" \"npm run dev --prefix server\""
   },
